# normalized-schema-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/normalized_schema_generator/: __init__.py  widget.css  widget.js  widget.py
